# banes-satn

./: .gitignore  AGENTS.md  CONTEXT.md  NOTES.md  PRD.md  README.md  pyproject.toml
config/: banes.yaml
deployments/: catalogue.yaml
references/: banes-legacy-pairwise-summary.json
scripts/: acquire_ea_elevation.py  build_deployment_catalogue.py  package_pages.py  publish_site.py  validate_pages_release.py
site/: README.txt  agent-records.json  backbone-comparison.json  data.js  divergence-records.json  human-intervention-requests.json  index.html  network.geojson  publication.json  topography-profile-evidence.json
tests/: conftest.py  test_agent_decision_replay.py  test_agent_decision_requests.py  test_agent_gate.py  test_area_deployment_browser.py  test_atm_comparison.py  test_authoritative_backbone.py  test_backbone_assembly.py  test_context_evidence.py  test_deployment_catalogue.py  test_direct_runtime_decisions.py  test_ea_elevation_acquisition.py  test_elevation_sources.py  test_fixture_tracer.py  test_heartbeat.py  test_lcwip_contract.py  test_lcwip_demand_planning.py  test_lcwip_evidence_registry.py  test_lcwip_governance.py  test_lcwip_intervention_packages.py  test_lcwip_monitoring.py  test_lcwip_prioritisation.py  test_lcwip_publication.py  test_lcwip_staged_agents.py  test_lcwip_walking_planning.py  test_network_assembly.py  test_osm_sources.py  test_pages_packaging.py  test_published_site.py  test_publisher.py  test_recompilation.py  test_review_map_browser.py  test_review_map_interface_contract.py  test_routable_attachment.py  test_rural_compiler.py  (+8 more)
(+108 files in other folders)
